<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.hkmtuning.ui.activities.ActivityMain">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="@dimen/padding_small">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="@dimen/padding_small">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="right">

                    <Button
                        android:id="@+id/log"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:paddingLeft="@dimen/small_progress"
                        android:paddingRight="@dimen/small_progress"
                        android:text="@string/log"
                        android:textColor="@android:color/white"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:id="@+id/message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textColor="@android:color/white"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                    <ProgressBar
                        android:id="@+id/progress_bar_api_db"
                        android:layout_width="@dimen/small_progress"
                        android:layout_height="@dimen/small_progress"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/padding_small"
                        android:indeterminateTint="@android:color/white"
                        android:indeterminateTintMode="src_atop"
                        android:padding="@dimen/padding_medium"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                    <Button
                        android:id="@+id/from_api_to_db"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:paddingLeft="@dimen/small_progress"
                        android:paddingRight="@dimen/small_progress"
                        android:text="@string/from_api_to_db"
                        android:textColor="@android:color/white"/>

                    <Button
                        android:id="@+id/from_db_to_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:paddingLeft="@dimen/small_progress"
                        android:paddingRight="@dimen/small_progress"
                        android:text="@string/from_db_to_list"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/categories_frame_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <FrameLayout
                android:id="@+id/content_frame_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/popup_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
