<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/black_tr"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/padding_small"
        app:cardElevation="@dimen/padding_large"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="?actionBarSize"
                    android:layout_height="?actionBarSize"
                    android:background="?selectableItemBackgroundBorderless"
                    android:scaleType="center"
                    android:src="@drawable/ic_arrow_back_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/product_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        tools:text="Title"/>

                    <TextView
                        android:id="@+id/category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        tools:text="Category"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/padding_medium"
                    android:gravity="center_vertical"
                    android:text="@string/art"/>

                <TextView
                    android:id="@+id/art_no"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/padding_medium"
                    android:layout_marginRight="@dimen/padding_medium"
                    android:gravity="center_vertical"
                    tools:text="NNNN"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/card_product_height"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:padding="@dimen/padding_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/padding_small"
                                android:text="@string/price_from"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                android:textColor="@android:color/black"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/price_from"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/padding_small"
                                tools:text="NNN"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/padding_small"
                                android:text="@string/price_for_sale"
                                android:textColor="@android:color/black"/>

                            <TextView
                                android:id="@+id/price_for_sale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/padding_small"
                                tools:text="NNN"/>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_medium"
                            tools:text="@string/lorem"/>


                    </LinearLayout>

                </ScrollView>

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>